Measuring tape - bugfixing distance

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MeasuringTape"></activity>
+
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     </application>
 
 </manifest>
